...
        textLabel.text = step.question
        counterLabel.text = step.questionNumber
    }
    
    func show(quiz result: QuizResultsViewModel) {
        
        let model = AlertModel(accessibilityId: "EndGameAlert",
                               title: result.title,
                               message: result.text,
                               buttonText: result.buttonText,
                               completion: presenter.restartGame)
        
        alertPresenter.show(in: self, model: model)
...
